tests/error/ptr_arg_0_size.gw
// [contains] cannot declare variables of size '0'
 typedef void (my_func)(void arg){}
